feat(nginx_proxy_manager): 添加Nginx Proxy Manager插件支持
实现Nginx Proxy Manager插件，支持证书上传和代理主机管理功能
- 添加证书上传功能，支持自动检测和更新证书
- 实现代理主机管理，支持域名绑定证书
- 添加REST API客户端，支持登录和请求中间件
- 完善证书解析和哈希计算工具
- 更新README文档，添加插件使用说明

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ on:
         type: choice
         options:
           - ctyun
+          - nginx_proxy_manager
           # 如果有更多模块，可以在这里添加，例如：
           # - aliyun
           # - tencentcloud
