--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,7 @@ on:
         options:
           - ctyun
           - nginx_proxy_manager
-          # 如果有更多模块，可以在这里添加，例如：
-          # - aliyun
-          # - tencentcloud
+          - proxmox
       arch: # 架构选择输入
         description: '选择架构'
         required: true
