feat(synology): 新增 Synology 证书管理插件支持
添加 Synology 证书管理插件，包括以下功能：
- 实现 Synology API 客户端封装
- 添加证书上传和检查逻辑
- 提供完整的证书解析和验证功能
- 更新文档和 CI 配置

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ on:
           - ctyun
           - nginx_proxy_manager
           - proxmox
+          - synology
       arch: # 架构选择输入
         description: '选择架构'
         required: true
