feat(safeline): 添加雷池WAF插件支持
新增雷池WAF插件实现，包括：
1. 添加openapi客户端实现
2. 实现防护应用证书部署功能
3. 更新README文档说明
4. 添加CHANGELOG记录
5. 完善Makefile构建配置

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ on:
           - proxmox
           - synology
           - aawaf
+          - safeline
       arch: # 架构选择输入
         description: "选择架构"
         required: true
