feat(xppanel): 添加小皮面板插件支持网站证书适配
实现小皮面板插件的基本功能，包括：
- 添加 CHANGELOG 记录版本更新
- 更新 CI 工作流配置
- 实现通用类型定义和响应结构
- 添加 Makefile 构建脚本
- 实现网站相关类型定义
- 添加 OpenAPI 客户端和中间件
- 实现网站证书绑定功能
- 添加主程序入口和动作处理逻辑

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ on:
           - synology
           - aawaf
           - safeline
-          - xp
+          - xppanel
       arch: # 架构选择输入
         description: "选择架构"
         required: true
