--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ on:
           - aawaf
           - safeline
           - xppanel
+          - ratpanel
       arch: # 架构选择输入
         description: "选择架构"
         required: true
