--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ on:
           - safeline
           - xppanel
           - ratpanel
+          - lucky
       arch: # 架构选择输入
         description: "选择架构"
         required: true
