feat(uuwaf): 添加南墙WEB应用防火墙插件支持
- 新增南墙WEB应用防火墙插件，支持V6和V7版本的证书管理
- 添加相关类型定义、API客户端和证书操作逻辑
- 更新README文档和CHANGELOG
- 修改构建配置以包含新插件

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ on:
           - xppanel
           - ratpanel
           - lucky
+          - uuwaf
       arch: # 架构选择输入
         description: "选择架构"
         required: true
