feat(open_resty_manager): 新增OpenResty管理面板插件支持
添加OpenResty管理面板插件，支持网站管理和证书管理功能
- 实现证书上传和域名绑定功能
- 新增API客户端和类型定义
- 更新README文档和CI配置

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ on:
           - ratpanel
           - lucky
           - uuwaf
+          - open_resty_manager
       arch: # 架构选择输入
         description: "选择架构"
         required: true
