feat(edgeone): 添加腾讯云EdgeOne插件支持
实现腾讯云EdgeOne插件的核心功能，包括SSL证书上传和域名绑定
更新Go版本至1.25.3
添加CI工作流配置

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,17 +9,18 @@ on:
         default: "ctyun"
         type: choice
         options:
-          - ctyun
-          - nginx_proxy_manager
-          - proxmox
-          - synology
           - aawaf
-          - safeline
-          - xppanel
-          - ratpanel
+          - ctyun
+          - edgeone
           - lucky
-          - uuwaf
+          - nginx_proxy_manager
           - open_resty_manager
+          - proxmox
+          - ratpanel
+          - safeline
+          - synology
+          - uuwaf
+          - xppanel
       arch: # 架构选择输入
         description: "选择架构"
         required: true
