fix(edgeone): 更新版本号并优化证书过期时间解析
使用 gotime 库统一处理证书过期时间解析，避免重复代码
在 .cnb.yml 中添加 set-output 输出构建结果

--- a/.cnb.yml
+++ b/.cnb.yml
@@ -91,6 +91,9 @@
             echo "🎉 所有类型构建 & 推送完毕"
             echo "=============================="
 
+            # 11. 通过 set-output 输出到 result
+            echo "##[set-output version=$version]"
+            echo "##[set-output modules=$modules]"
           exports:
             version: VERSION
             modules: MODULES
